[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/Node/GameObj/Enemy/Core/EnemyCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Node/GameObj/Enemy/Core/BossCore.gd" type="Script" id=2]

[node name="BossCore" groups=[
"Boss",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
explosion_effect = null
death_sound = 3
hit_points_base = 28
invincible_enabled = true
show_invincible_sprite = true
pickups_drop_enabled = false

[node name="InvisTimer" parent="." index="5"]
wait_time = 0.3

[connection signal="slain" from="." to="." method="_on_BossCore_slain"]
[connection signal="taken_damage" from="." to="." method="_on_BossCore_taken_damage"]
